# LAION-fMRI

./: .buildinfo  .gitignore  LICENSE  PACKAGE_DESIGN.md  README.md  behavioral_data.html  contributing.html  data_access.html  dataset_overview.html  environment.yml  experiments.html  faq.html  functional_data.html  genindex.html  get-to-know-a-dataset.ipynb  glm.html  glm_data.html  index.html  news.html  preprocessing.html  processing_pipeline.html  pyproject.toml  quality_control.html  quickstart.html  release-history.html  search.html  searchindex.js  stimulus_data.html  structural_data.html  usage.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml
_sources/: behavioral_data.rst.txt  data_access.rst.txt  dataset_overview.rst.txt  faq.rst.txt  glm_data.rst.txt  index.rst.txt  preprocessing.rst.txt  quickstart.rst.txt  structural_data.rst.txt
_static/: copybutton.js  custom.css  custom_rtd.css
docs/: Makefile
docs/source/: anatomical_data.rst  api.rst  conf.py  contributing.rst  (+24 more)
examples/: GALLERY_HEADER.rst  plot_01_quickstart.py  plot_02_initialization.py  plot_03_querying.py  plot_04_loading.py
laion_fmri/: _cli.py  _constants.py  _errors.py  _laion_fmri_fetch.py  _paths.py  _s3_engine.py  _sources.py  brain.py  config.py  discovery.py  download.py  group.py  io.py  subject.py  torch_data.py
tests/: conftest.py  test_brain.py  test_cli.py  test_config.py  test_constants.py  test_discovery.py  test_download.py  test_errors.py  test_group.py  test_integration_s3.py  test_io.py  test_laion_fmri_fetch.py  test_paths.py  test_s3_engine.py  test_sources.py  test_splits.py  test_subject.py  test_torch_data.py
(+34 files in other folders)
